--- a/PositiveVibes/Base.lproj/Main.storyboard
+++ b/PositiveVibes/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11151.4"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,11 +18,100 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thu-2u-dnz">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="Oym-st-aAL"/>
+                                </subviews>
+                                <color key="backgroundColor" red="0.011764705882352941" green="0.66274509803921566" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Oym-st-aAL" firstAttribute="centerY" secondItem="thu-2u-dnz" secondAttribute="centerY" id="I4e-xD-kA3"/>
+                                    <constraint firstAttribute="height" constant="150" id="g6E-oP-kI7"/>
+                                    <constraint firstItem="Oym-st-aAL" firstAttribute="centerX" secondItem="thu-2u-dnz" secondAttribute="centerX" id="q6Y-Kk-Hoz"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Da-ty-oG0">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVO-PQ-ZIf">
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0078431372549019607" green="0.53333333333333333" blue="0.81960784313725488" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fVO-PQ-ZIf" secondAttribute="trailing" constant="8" id="8bH-Qo-q80"/>
+                                    <constraint firstAttribute="height" constant="75" id="bfQ-be-UZy"/>
+                                    <constraint firstItem="fVO-PQ-ZIf" firstAttribute="top" secondItem="1Da-ty-oG0" secondAttribute="top" constant="8" id="lxz-bi-quu"/>
+                                    <constraint firstItem="fVO-PQ-ZIf" firstAttribute="leading" secondItem="1Da-ty-oG0" secondAttribute="leading" constant="8" id="u8D-Yx-hSV"/>
+                                    <constraint firstAttribute="bottom" secondItem="fVO-PQ-ZIf" secondAttribute="bottom" constant="8" id="xCO-Xe-fFR"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lve-ZA-4YT">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="qDB-3p-AFX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lG5-XR-GBY">
+                                <color key="backgroundColor" red="0.11764705882352941" green="0.2196078431372549" blue="0.56862745098039214" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="5TG-sC-PTe"/>
+                                    <constraint firstAttribute="height" constant="150" id="p3C-1Z-Rb5"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="DgL-o3-H0x">
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nG5-yn-XUC">
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tYC-Qg-HW3">
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vge-cM-ezm">
+                                        <color key="backgroundColor" red="0.93725490196078431" green="0.42352941176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DgL-o3-H0x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="1Rw-Hm-ZrZ"/>
+                            <constraint firstItem="1Da-ty-oG0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DVM-Gv-hPg"/>
+                            <constraint firstItem="DgL-o3-H0x" firstAttribute="top" secondItem="lG5-XR-GBY" secondAttribute="bottom" constant="40" id="LRc-3L-1my"/>
+                            <constraint firstItem="thu-2u-dnz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Par-CF-boT"/>
+                            <constraint firstAttribute="trailing" secondItem="thu-2u-dnz" secondAttribute="trailing" id="S4r-RJ-Btf"/>
+                            <constraint firstItem="lve-ZA-4YT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="T3e-T4-wkV"/>
+                            <constraint firstItem="lve-ZA-4YT" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="V4Y-Ke-p0I"/>
+                            <constraint firstItem="DgL-o3-H0x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="X6r-nI-Eeo"/>
+                            <constraint firstAttribute="trailing" secondItem="1Da-ty-oG0" secondAttribute="trailing" id="b03-fN-v7p"/>
+                            <constraint firstItem="lve-ZA-4YT" firstAttribute="top" secondItem="thu-2u-dnz" secondAttribute="bottom" constant="15" id="i3u-oQ-Y1V"/>
+                            <constraint firstItem="lG5-XR-GBY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mFn-Hx-7pA"/>
+                            <constraint firstItem="lG5-XR-GBY" firstAttribute="top" secondItem="lve-ZA-4YT" secondAttribute="bottom" constant="40" id="osf-VY-beT"/>
+                            <constraint firstItem="thu-2u-dnz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ozh-KJ-EEv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1Da-ty-oG0" secondAttribute="bottom" id="tnF-vp-yDC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DgL-o3-H0x" secondAttribute="trailing" constant="30" id="uD5-QH-guQ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="36" y="37.331334332833585"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
