--- a/PositiveVibes/Base.lproj/Main.storyboard
+++ b/PositiveVibes/Base.lproj/Main.storyboard
@@ -113,11 +113,48 @@
                     <connections>
                         <outlet property="emailField" destination="nG5-yn-XUC" id="kBU-2j-Zkp"/>
                         <outlet property="passField" destination="tYC-Qg-HW3" id="KMq-6p-AMS"/>
+                        <segue destination="CVC-GE-MN9" kind="show" identifier="goToFeed" id="XvV-LB-tam"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="36" y="37.331334332833585"/>
+        </scene>
+        <!--FeedVC-->
+        <scene sceneID="WGA-GQ-WG2">
+            <objects>
+                <viewController id="CVC-GE-MN9" customClass="FeedVC" customModule="PositiveVibes" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nih-s4-Xaz"/>
+                        <viewControllerLayoutGuide type="bottom" id="UVN-mK-lQE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tbT-yj-6bp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1QE-xv-Saf">
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Sign out ">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="signOutTapped:" destination="CVC-GE-MN9" eventType="touchUpInside" id="sfh-fw-fiv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.01176470588" green="0.66274509800000003" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="1QE-xv-Saf" firstAttribute="centerY" secondItem="tbT-yj-6bp" secondAttribute="centerY" id="Lq7-Zt-Z8m"/>
+                            <constraint firstItem="1QE-xv-Saf" firstAttribute="centerX" secondItem="tbT-yj-6bp" secondAttribute="centerX" id="oKu-FS-Gfx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignInScreen" id="LWV-3e-XnA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oeP-nu-0Gv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732" y="40.929535232383813"/>
         </scene>
     </scenes>
     <resources>
