--- a/PositiveVibes/Base.lproj/Main.storyboard
+++ b/PositiveVibes/Base.lproj/Main.storyboard
@@ -163,12 +163,16 @@
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EFo-Cp-vWw">
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="ocM-IU-kQw" customClass="CircleView" customModule="PositiveVibes" customModuleProvider="target">
+                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="ocM-IU-kQw" customClass="CircleView" customModule="PositiveVibes" customModuleProvider="target">
                                                 <color key="backgroundColor" red="0.0078431372550000003" green="0.53333333329999999" blue="0.81960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="49" id="Two-RX-SIZ"/>
                                                     <constraint firstAttribute="height" constant="49" id="wYH-01-9JS"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="g0i-5S-jV3" appends="YES" id="coX-tX-ari"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add a caption" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZSJ-wS-uFM" customClass="FancyField" customModule="PositiveVibes" customModuleProvider="target">
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
@@ -301,6 +305,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addImage" destination="ocM-IU-kQw" id="NSC-Rq-PMN"/>
                         <outlet property="tableView" destination="IWx-WR-g17" id="qVr-fZ-ksb"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignInScreen" id="LWV-3e-XnA"/>
                     </connections>
@@ -309,6 +314,11 @@
                 <tapGestureRecognizer id="fte-bf-5wL">
                     <connections>
                         <action selector="signOutTapped:" destination="CVC-GE-MN9" id="Gl1-oE-Thn"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="g0i-5S-jV3">
+                    <connections>
+                        <action selector="addImageTapped:" destination="CVC-GE-MN9" id="1T0-1W-QTI"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
